new lesson first

--- a/src/componentssss/header/Header.css
+++ b/src/componentssss/header/Header.css
@@ -1,7 +1,7 @@
-.target {
+/* .target {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100px;
     background: silver;
-}
+} */
